# openenv-kgqa

./: Dockerfile  README.md  inference.py  test_kgqa.py
data/: generator.py  task1_instances.json  task2_instances.json  task3_instances.json
kgqa_env/: Dockerfile  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
kgqa_env/data/: generator.py  task3_instances.json
kgqa_env/server/: app.py  kgqa_environment.py  rewards.py
server/: Dockerfile  app.py  graph.py
